[package]
name = "swarmhost-core"
version = "0.1.0"
edition = "2024"
authors = ["Michael Goodeaux <michaelgoodeaux@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Distributed multiplayer game networking with blockchain-inspired consensus"

[features]
default = []
ffi = []

[lib]
name = "swarmhost_core"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
quinn = "0.10"
bytes = "1.5"

# Serialization
prost = "0.12"
prost-types = "0.12"

# Cryptography
ed25519-dalek = "2.1"
blake2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI
libc = "0.2"

[build-dependencies]
prost-build = "0.12"
cbindgen = "0.26"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1